syntax = "proto3";

package hvx.api.v1alpha1.actor.proto;
option go_package = "v1alpha1/actor";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

service Actor {
  rpc Create(CreateRequest) returns (CreateResponse) {}

  // GetActorsByPreferredUsername Returns the set of actors by the
  // specified GetActorsByPreferredUsername by PreferredUsername.
  rpc GetActorsByPreferredUsername (GetActorsByPreferredUsernameRequest) returns (GetActorsByPreferredUsernameResponse) {
    option (google.api.http) = {
      get: "/api/v1/search/{preferred_username}"
    };
  }

  // GetActorByAddress Returns the actor identified by the specified address.
  rpc GetByAddress (GetActorByAddressRequest) returns (ActorData) {}

  // EditActor Edit the actor's profile and view the structure to get
  // the allowed and changeable parameters.
  // By username.
  rpc Edit (EditRequest) returns (EditResponse) {
    option (google.api.http) = {
      put: "/api/v1/actor",
      body: "*"
    };
  }

  rpc Delete (google.protobuf.Empty) returns (DeleteResponse) {}

  // GetActorByUsername Get by username returns the actor
  // identified by the specified username.
  rpc GetActorByUsername (GetActorByUsernameRequest) returns (ActorData) {}
}

message CreateRequest {
  string preferred_username = 1;
  string public_key = 2;
  string actor_type = 3;
}

message CreateResponse {
  string code = 1;
  string actor_id = 2;
}

message ActorData {
  string id = 1;
  string preferred_username = 2;
  string domain = 3;
  string avatar = 4;
  string name = 5;
  string summary = 6;
  string inbox = 7;
  string address = 8;
  string public_key = 9;
  string actor_type = 10;
  string is_remote = 11;
}

message GetActorsByPreferredUsernameRequest {
  string preferred_username = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetActorsByPreferredUsernameResponse {
  string code = 1;
  repeated ActorData actors = 2;
}

message GetActorByAddressRequest {
  string address = 1;
}

message EditRequest {
  string name = 1;
  string avatar = 2;
  string summary = 3;
}

message EditResponse {
  string code = 1;
  string reply = 2;
}

message DeleteResponse {
  string code = 1;
  string status = 2;
}

message GetActorByUsernameRequest {
  string username = 1;
}
