syntax = "proto3";

package hvx.api.v1alpha1.public.proto;
option go_package = "github.com/hvxahv/hvx/APIs/v1alpha1/public";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

service Public {
  // Get the instance details of the current instance.
  rpc GetInstance(google.protobuf.Empty) returns (GetInstanceResponse) {
    option (google.api.http) = {
      get: "/public/instance"
    };
  }

  // CreateAccounts creates new accounts.
  rpc CreateAccounts(CreateAccountsRequest) returns (CreateAccountsResponse) {
    option (google.api.http) = {
      post: "/public/account/create",
      body: "*"
    };
  }

  // Open API routing for the ActivityPub protocol.
  // ActivityPub https://www.w3.org/TR/activitypub/
  // HTTP API for public query of ActivityPub.
  // ActivityPub WebFinger https://github.com/w3c/activitypub/issues/194 .
  rpc GetWebfinger(GetWebfingerRequest) returns (GetWebfingerResponse) {
    option (google.api.http) = {
      get: "/.well-known/webfinger"
    };
  }

  // Get the actors in the activityPub protocol.
  // https://www.w3.org/TR/activitypub/#actor-objects
  rpc GetActor(GetActorRequest) returns (GetActorResponse) {
    option (google.api.http) = {
      get: "/u/{actor}"
    };
  }

  rpc GetChannel(GetChannelRequest) returns (GetActorResponse) {
    option (google.api.http) = {
      get: "/c/{channel}"
    };
  }
}

message GetInstanceResponse {
  string Code = 1;
  string Version = 2;
  string Build = 3;
  string Maintainer = 4;
  string Repo = 5;
  string Host = 6;
  string MatrixAPI = 7;
  string IpfsAPI = 8;
  string IpfsGateway = 9;
}

message GetInstancesResponse {
  repeated GetInstanceResponse instances = 1;
}

message CreateAccountsRequest {
  string username = 1;
  string password = 2;
  string mail = 3;
  string publicKey = 4;
}

message CreateAccountsResponse {
  string code = 1;
  string response = 2;
}

message GetWebfingerRequest {
  string resource = 1;
}

message GetWebfingerResponse {
  message link {
    string rel = 1;
    string type = 2;
    string href = 3;
  }
  string subject = 1;
  repeated string aliases = 2;
  repeated link links = 3;
}

message GetActorRequest {
  string actor = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetChannelRequest {
  string channel = 1 [(google.api.field_behavior) = REQUIRED];
}


message GetActorResponse {
  message PublicKey {
    string id = 1;
    string owner = 2;
    string publicKeyPem = 3;
  }

  message Icon {
    string type = 1;
    string url = 2;
    string mediaType = 3;
  }

  repeated string context = 1 [json_name = "@context"];
  string id = 2;
  string type = 3;
  string following = 4;
  string followers = 5;
  string inbox = 6;
  string outbox = 7;
  string preferredUsername = 8;
  string name = 9;
  string summary = 10;
  string url = 11;
  PublicKey publicKey = 12;
  Icon icon = 13;
}
